Version Next

    - Added method Primitive.parsePattern()
    - DoubleFormat removed; use Primitive.DOUBLE instead
    - Improve AnnotatedXMLEvent{Reader,Writer} subclass API
      NOTE: the above are backward-incompatible changes
    - Added StreamWriterDelegate and EventWriterDelegate
    - Added IndentXMLStreamWriter and EmptyTagXMLStreamWriter
    - Added AnnotatedXMLStreamReader and AnnotatedXMLStreamWriter

Version 1.0.794 Released December 11, 2013

    - Renamed SpringVaadinSession -> SpringVaadinSessionListener
      NOTE: the above are backward-incompatible changes
    - Add new servlet init params "sessionTracking" and "maxSessions"
    - Added VaadinSessionContainer
    - Added MergedResultSet
    - Added PersistentObjectTransactionManager and @PersistentObjectTransactional
    - Added ProcessRunner.handleInterruption()
    - Added SortingPropertyExtractor
    - Added @ProvidesProperty{,Sort} and FieldBuilder
    - Back-port some new classes from vaadin7 -> vaadin

Version 1.0.744 Released October 11, 2013

    - Moved CSVOutput from "string" to "io" sub-package
    - Extracted *Callback interfaces out of NullModem*Stream classes
      NOTE: the above are backward-incompatible changes
    - Added ThreadLogger
    - Added "vaadin" sub-package of org.dellroad.stuff.pobj
    - Added @ProvidesProperty annotation and container constructor support
    - Added EnumContainer, EnumComboBox, and EnumUtil
    - Added new method Primitive.getDefaultValue()
    - Fixed bug in AbstractUnsizedContainer
    - Added new "pobj.distrib" package for multi-node synchronization
    - Added PersistentObject read() and write() method variants
    - Added WritableResource
    - Added AbstractBean

Version 1.0.704 Released August 28, 2013

    - Add GraphClonable and GraphCloneRegistry
    - Add subclass hooks for stdout and stderr in ProcessRunner
    - Update VaadinUtil.invoke{,Later} to use VaadinSession.access{Synchronously,}