@@ -1,6 +1,7 @@
 Version Next
 
-    - Added method Primitive.parsePattern()
+    - Added method Primitive.parsePattern() and Primitive.VOID
+    - Add generic type to Primitive (no longer extend Enum)
     - DoubleFormat removed; use Primitive.DOUBLE instead
     - Improve AnnotatedXMLEvent{Reader,Writer} subclass API
       NOTE: the above are backward-incompatible changes
